# qahirah

./: README  qahirah.py  setup.cfg  setup.py
