[metadata]
license_file = COPYING
platform = Linux
classifiers =
    Programming Language :: Python :: 3.3
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Multimedia :: Graphics

[bdist_wheel]
python-tag = py33
#plat-name = linux
